Adding wishlist module
